프론트엔드 작업

--- a/typescript_work/my-project/games.html
+++ b/typescript_work/my-project/games.html
@@ -27,19 +27,20 @@
             <!-- 사이드바 -->
             <aside class="sidebar">
                 <nav class ="sidebar-nav">
-                    <a href-="#game" class="nav-item active">
+
+                    <a href="games.html" class="nav-item active">
                         <i class="fa-solid fa-trophy"></i>
                         <span>경기 관리</span>
                     </a>
-                    <a href="#users" class="nav-item">
+                    <a href="user.html" class="nav-item">
                         <i class="fa-solid fa-users"></i>
                         <span>사용자 관리</span>
                     </a>
-                    <a href="#payment" class="nav-item">
+                    <a href="payment.html" class="nav-item">
                         <i class="fa-solid fa-credit-card"></i>
                         <span>결제 관리</span>
                     </a>
-                    <a href="#settings" class="nav-item">
+                    <a href="settings.html" class="nav-item">
                         <i class="fa-solid fa-gear"></i>
                         <span>앱 설정</span>
                     </a>
