--- a/typescript_work/my-project/login.html
+++ b/typescript_work/my-project/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>퍼니런 - 관리자 웹</title>
-    <link rel ="stylesheet" href="src/style.css">
+    <link rel ="stylesheet" href="src/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
